# SteelDefectDetectionManage

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  GEMINI.md  README.md  SSH.pem  apply_nginx.ps1  run_nginx.bat  ssh2txw.bat  update_nginx.cmd
ElectronBuild/: build_all.bat  main.js  package-lock.json  package.json  preload.js
ElectronBuild/scripts/: copy-web.js
ElectronBuild/web/: index.html
ElectronBuild/web/assets/: index-CkdMAlkl.css  index-DGYaNH5S.js  index-De5E7KpW.css  index-myD_T9eH.js
TauriBuild/: build.bat  package.json
TauriBuild/src-tauri/: Cargo.toml  tauri.conf.json
TauriBuild/src-tauri/icons/: icon.icns
TauriBuild/src-tauri/src/: main.rs
cfg/: vite.config.ts
work/: Linux部署文档.md
work/clash/: 1755607623989.yml  install_clash.bat  install_clash.md  install_clash.sh  脚本需求.md
work/cli部署/: gemini_cli.md
work/ops/: README.md  bootstrap_and_deploy_remote.bat  bootstrap_repo.bat  deploy_all.sh  deploy_all_remote.bat
work/ops/maintenance/: 01_status.sh  02_logs.sh  03_restart.sh  README.md
work/ops/nginx/: apply_net_table_nginx.ps1  bkvision.online.conf  net_table.generated.conf
work/ops/steps/: 00_bootstrap_repo.sh  01_check_env.sh  02_setup_backend.sh  03_setup_frontend.sh  04_pm2_start.sh  05_nginx_setup.sh  06_pm2_startup.sh  07_optional_packages.sh
work/win/urls/: clash下载.url  frp 下载.url  git下载.url  nodejs下载.url  迅雷下载.url
work/功能/: cache页面.md  nginx_conf生成说明  下载页.md  实时图像功能  常规设置界面功能。md  开头约束.md  快捷键.md  数据绑定.md  服务配置.md  模拟运行测试.md  系统诊断功能.md  缓存调试.md  配置中心设计.md  配置合并.md  默认设置.md
